fix: align debate phase buttons to the right in host panel

--- a/static/common.css
+++ b/static/common.css
@@ -312,7 +312,7 @@
 }
 .debate-chapter-extra {
   margin-top: .3rem;
-  padding-left: 1.6rem;
+  text-align: right;
 }
 .btn-sm {
   padding: .2rem .6rem;
